fix: dark mode across pages

--- a/src/master.css
+++ b/src/master.css
@@ -1,3 +1,14 @@
+html,
+#root {
+  background-color: #131515;
+  color: #fffafb;
+}
+
+.dark-mode {
+  background-color: #131515;
+  color: #fffafb;
+}
+
 .middle {
   display: table;
   margin: 0 auto;
